--- a/404.html
+++ b/404.html
@@ -1,20 +1,9 @@
-<!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
--->
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
+
 <html class="no-js" lang="en">
-<!--<![endif]-->
+
 
 <head>
   <meta charset="utf-8">
@@ -22,24 +11,11 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Page Not Found | TEDxJMI</title>
+  <title>Page Not Found</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
   <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
 
-  <!-- Social media tags -->
-  <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
-  <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
