new final draft

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><a href="https://goo.gl/maps/Lqr1niM7Edyfyefc6" class="line-height-unset">Brochure</a></li>
             <li><a href="" class="line-height-unset">Proposition</a></li>
             <li><a href="" class="line-height-unset">Rules & Regulations</a></li>
-            <li><a href="./gallery/index.html" class="line-height-unset">Gallery</a></li>
+            <li><a href="./gallery/" class="line-height-unset">Gallery</a></li>
             <li><a href="#page-bottom" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="" class="line-height-unset width-100">
