--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Council competitions, Mediations and Quiz Programs.
             <img src="res/images/logos/glogo2.png" alt="">
           </div>
           <!-- //.footer-logo -->
-          <p class="disclaimer xs-text-center">
+          <p class="font-family-alt disclaimer xs-text-center font-weight-900">
             Official website by GLCK
           </p>
           <!-- //.disclaimer -->
@@ -390,7 +390,7 @@ Council competitions, Mediations and Quiz Programs.
         <div class="col-sm-4">
           <div class="footer-social" style="margin-top: 35px;" >
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium" >
-              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
   
               <li><a href="https://instagram.com/tedxjmi"><i class="fa fa-google"></i></a></li>
             </ul>
