--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
             <div class="col-md-12 col-sm-12">
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2 ">
                 We are pleased to announce the upcoming <b>T.P Aravindakshan Memorial All India Moot
-                  Court Competition 2023</b>T.P Aravindakshan Memorial All India Moot
-                Court Competition 2023 organized by the Government Law College, Kozhikode - Moot
+                  Court Competition 2023</b> organized by the Government Law College, Kozhikode - Moot
                 Court Society (GLCKMCS) in association with Students Union and CLCA (Calicut Law
                 College Alumni). This prestigious event provides a platform for law students across the
                 country to showcase their legal skills, research acumen, and persuasive advocacy in a
