--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Council competitions, Mediations and Quiz Programs.
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium" >
               <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
   
-              <li><a href="https://instagram.com/tedxjmi"><i class="fa fa-google"></i></a></li>
+              <li><a href="mailto:mcsglck@gmail.com"><i class="fa fa-google"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
