change drive link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="#page-top" class="page-scroll">Home</a></li>
             <li><a href="https://goo.gl/maps/Lqr1niM7Edyfyefc6" class="line-height-unset">Brochure</a></li>
-            <li><a href="https://drive.google.com/file/d/17CVg3z-noAJYZs_sRBRp0a83FINv54Nd/view?usp=sharing" class="line-height-unset">Proposition</a></li>
+            <li><a href="./proposition/" class="line-height-unset">Proposition</a></li>
             <li><a href="" class="line-height-unset">Rules & Regulations</a></li>
             <li><a href="./gallery/" class="line-height-unset">Gallery</a></li>
             <li><a href="#page-bottom" class="page-scroll">Contact Us</a></li>
