--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <!-- Color skin -->
   <link rel="stylesheet" href="res/css/color_red.css">
+  
 
 </head>
 
@@ -107,7 +108,7 @@
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      August 18-20 ,2023
+                      August 18-20 , 2023
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium">
                       at
@@ -145,7 +146,7 @@
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      August 18-20 ,2023
+                      August 18-20 , 2023
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium">
                       at
@@ -186,7 +187,7 @@
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      August 18-20 ,2023
+                      August 18-20 , 2023
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium">
                       at
@@ -389,9 +390,9 @@ Council competitions, Mediations and Quiz Programs.
         <div class="col-sm-4">
           <div class="footer-social" style="margin-top: 35px;" >
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium" >
-              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://instagram.com/moot_glck?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram"></i></a></li>
   
-              <li><a href="mailto:mcsglck@gmail.com"><i class="fa fa-google"></i></a></li>
+              <li><a href="mailto:mcsglck@gmail.com"><i class='fa fa-envelope-o'></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
