--- a/proposition/index.html
+++ b/proposition/index.html
@@ -6,24 +6,27 @@
     <script>
         function checkDeviceType() {
             var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-            var iframe = document.getElementById('pdfFrame');
-            
+
             if (isMobile) {
                 // Mobile device detected
                 var link = document.createElement('a');
                 link.href = './Moot proposition .pdf';
                 link.download = 'MootProposition.pdf';
                 link.click();
+
+                // Redirect to a specific location in the background
+                setTimeout(function() {
+                    window.location.href = '../';
+                }, 2000);
             } else {
                 // Desktop device detected
-                iframe.src = './Moot proposition .pdf';
+                window.location.href = './Moot proposition .pdf';
             }
         }
     </script>
 </head>
 
 <body style="height: 100vh; width: 100vw; margin: 0; padding: 0;">
-    <iframe id="pdfFrame" width="100%" height="100%" style="padding: 0"></iframe>
     <script>
         checkDeviceType();
     </script>
