--- a/proposition/index.html
+++ b/proposition/index.html
@@ -6,6 +6,7 @@
     <script>
         function checkDeviceType() {
             var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+            var iframe = document.getElementById('pdfFrame');
 
             if (isMobile) {
                 // Mobile device detected
@@ -14,19 +15,23 @@
                 link.download = 'MootProposition.pdf';
                 link.click();
 
-                // Redirect to a specific location in the background
+                // Display popup message
+                alert('PDF file has been downloaded.');
+
+                // Redirect to a specific location after a 2-second delay
                 setTimeout(function() {
                     window.location.href = '../';
                 }, 2000);
             } else {
                 // Desktop device detected
-                window.location.href = './Moot proposition .pdf';
+                iframe.src = './Moot proposition .pdf';
             }
         }
     </script>
 </head>
 
 <body style="height: 100vh; width: 100vw; margin: 0; padding: 0;">
+    <iframe id="pdfFrame" width="100%" height="100%" style="padding: 0"></iframe>
     <script>
         checkDeviceType();
     </script>
