--- a/proposition/index.html
+++ b/proposition/index.html
@@ -6,34 +6,19 @@
     <script>
         function checkDeviceType() {
             var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-            var iframe = document.getElementById('pdfFrame');
 
             if (isMobile) {
                 // Mobile device detected
-                var link = document.createElement('a');
-                link.href = './Moot proposition .pdf';
-                link.download = 'MootProposition.pdf';
-                link.click();
-
-                // Display popup message after a 2-second delay
-                setTimeout(function() {
-                    alert('Proposition has been downloaded.');
-                    
-                    // Redirect to a specific location after another 2-second delay
-                    setTimeout(function() {
-                        window.location.href = '../';
-                    }, 2000);
-                }, 2000);
+                window.location.href = 'https://drive.google.com/viewerng/viewer?url=./Moot proposition .pdf';
             } else {
                 // Desktop device detected
-                iframe.src = './Moot proposition .pdf';
+                window.location.href = './Moot proposition .pdf';
             }
         }
     </script>
 </head>
 
 <body style="height: 100vh; width: 100vw; margin: 0; padding: 0;">
-    <iframe id="pdfFrame" width="100%" height="100%" style="padding: 0"></iframe>
     <script>
         checkDeviceType();
     </script>
