--- a/proposition/index.html
+++ b/proposition/index.html
@@ -9,8 +9,11 @@
 
             if (isMobile) {
                 // Mobile device detected
-                alert('Opening document in Google Drive');
+               
                 setTimeout(function() {
+                    setTimeout(function() {
+                        alert('Opening document in Google Drive');
+                }, 2000);
                     window.location.href = 'https://drive.google.com/file/d/17CVg3z-noAJYZs_sRBRp0a83FINv54Nd/view?usp=drive_link';
                 }, 2000);
               
