--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <img src="res/images/logos/mlogo.png" alt="MOOK" style="width: 200px; height: 200px;margin-bottom: 20px;">
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      T.P ARAVINDAKSHAN MEMORIAL
+                      ADV T.P ARAVINDAKSHAN MEMORIAL
                       ALL INDIA MOOT COURT COMPETITION
                     </h3>
                     <br>
@@ -141,7 +141,7 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <img src="res/images/logos/mlogo.png" alt="MOOK" style="width: 200px; height: 200px;margin-bottom: 20px;">
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      T.P ARAVINDAKSHAN MEMORIAL
+                      ADV T.P ARAVINDAKSHAN MEMORIAL
                       ALL INDIA MOOT COURT COMPETITION
                     </h3>
                     <br>
@@ -182,7 +182,7 @@
                       <!--<img src="res/images/logos/glogo.png" alt="MOOK" style="width: 140px; height: 170px;margin-bottom: 20px;">-->
                     </div>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      T.P ARAVINDAKSHAN MEMORIAL
+                      ADV T.P ARAVINDAKSHAN MEMORIAL
                       ALL INDIA MOOT COURT COMPETITION
                     </h3>
                     <br>
