--- a/proposition/index.html
+++ b/proposition/index.html
@@ -10,7 +10,7 @@
 
             if (isMobile) {
                 // Mobile device detected
-                var confirmed = confirm('Are you sure you want to proceed with the download?');
+                var confirmed = confirm('Click ok to continue downloading the document!');
 
                 if (confirmed) {
                     var link = document.createElement('a');
