--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li><a href="./gallery/" class="line-height-unset">Gallery</a></li>
             <li><a href="#page-bottom" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
-              <a href="" class="line-height-unset width-100">
+              <a href="https://forms.gle/arYwwSJhh65zH74c7" class="line-height-unset width-100">
                 Register
               </a>
             </li>
