--- a/gallery/index.html
+++ b/gallery/index.html
@@ -70,7 +70,7 @@
             <li><a href="" class="line-height-unset">Rules & Regulations</a></li>
             <li><a href="#page-top" class="line-height-unset">Gallery</a></li>
             <li class="bg-base-color">
-              <a href="" class="line-height-unset width-100">
+              <a href="https://forms.gle/arYwwSJhh65zH74c7" class="line-height-unset width-100">
                 Register
               </a>
             </li>
