--- a/proposition/index.html
+++ b/proposition/index.html
@@ -14,8 +14,8 @@
 
                 if (confirmed) {
                     var link = document.createElement('a');
-                    link.href = './Moot proposition .pdf';
-                    link.download = 'MootProposition.pdf';
+                    link.href = './Proposition.pdf';
+                    link.download = 'Proposition.pdf';
                     link.click();
 
                     // Display popup message after a 2-second delay
@@ -32,7 +32,7 @@
                 }
             } else {
                 // Desktop device detected
-                iframe.src = './Moot proposition .pdf';
+                iframe.src = './Proposition.pdf';
             }
         }
     </script>
