--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div id="navbar" class="navbar-collapse collapse col-lg-9 col-md-8 pull-right"> <!-- Adjusted the col classes to accommodate the navbar items -->
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="#page-top" class="page-scroll">Home</a></li>
-            <li><a href="https://goo.gl/maps/Lqr1niM7Edyfyefc6" class="line-height-unset">Brochure</a></li>
+            <li><a href="./brochure/" class="line-height-unset">Brochure</a></li>
             <li><a href="./proposition/" class="line-height-unset">Proposition</a></li>
-            <li><a href="" class="line-height-unset">Rules & Regulations</a></li>
+            <li><a href="./rules/" class="line-height-unset">Rules & Regulations</a></li>
             <li><a href="./gallery/" class="line-height-unset">Gallery</a></li>
             <li><a href="#page-bottom" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
@@ -103,8 +103,8 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <img src="res/images/logos/mlogo.png" alt="MOOK" style="width: 200px; height: 200px;margin-bottom: 20px;">
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      ADV T.P ARAVINDAKSHAN MEMORIAL
-                      ALL INDIA MOOT COURT COMPETITION
+                      ADV. T.P ARAVINDAKSHAN MEMORIAL
+                      ALL INDIA MOOT COURT COMPETITION 2023
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
@@ -141,8 +141,8 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <img src="res/images/logos/mlogo.png" alt="MOOK" style="width: 200px; height: 200px;margin-bottom: 20px;">
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      ADV T.P ARAVINDAKSHAN MEMORIAL
-                      ALL INDIA MOOT COURT COMPETITION
+                      ADV. T.P ARAVINDAKSHAN MEMORIAL
+                      ALL INDIA MOOT COURT COMPETITION 2023
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
@@ -182,8 +182,8 @@
                       <!--<img src="res/images/logos/glogo.png" alt="MOOK" style="width: 140px; height: 170px;margin-bottom: 20px;">-->
                     </div>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      ADV T.P ARAVINDAKSHAN MEMORIAL
-                      ALL INDIA MOOT COURT COMPETITION
+                      ADV.  T.P ARAVINDAKSHAN MEMORIAL
+                      ALL INDIA MOOT COURT COMPETITION 2023
                     </h3>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
@@ -232,7 +232,7 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2 ">
-                We are pleased to announce the upcoming <b>T.P Aravindakshan Memorial All India Moot
+                We are pleased to announce the upcoming <b>Adv. T.P Aravindakshan Memorial All India Moot
                   Court Competition 2023</b> organized by the Government Law College, Kozhikode - Moot
                 Court Society (GLCKMCS) in association with Students Union and CLCA (Calicut Law
                 College Alumni). This prestigious event provides a platform for law students across the
@@ -316,7 +316,7 @@
     <div class="row">
       <div class="col-sm-6 col-md-7">
         <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
-          About the Moot Court Soceity
+          About the Moot Court Society
         </h2>
         <span class="bg-base-color margin-4 no-margin-bottom no-margin-rl separator-line-extra-thick-long"></span>
         <div class="row">
