--- a/gallery/index.html
+++ b/gallery/index.html
@@ -65,9 +65,9 @@
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="../" class="page-scroll">Home</a></li>
-            <li><a href="https://goo.gl/maps/Lqr1niM7Edyfyefc6" class="line-height-unset">Brochure</a></li>
+            <li><a href="../brochure/" class="line-height-unset">Brochure</a></li>
             <li><a href="../proposition/" class="line-height-unset">Proposition</a></li>
-            <li><a href="" class="line-height-unset">Rules & Regulations</a></li>
+            <li><a href="../rules/" class="line-height-unset">Rules & Regulations</a></li>
             <li><a href="#page-top" class="line-height-unset">Gallery</a></li>
             <li class="bg-base-color">
               <a href="https://forms.gle/arYwwSJhh65zH74c7" class="line-height-unset width-100">
