--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>GLCK MOOK COURT</title>
+  <title>GLCK MOOT COURT</title>
  
 
  
